--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/my_set.css" type="text/css">
 
   <!--Custom  Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Questrial|Didact+Gothic|Source+Sans+Pro:400,300|Open+Sans:300|Quicksand|Chivo' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Questrial|Didact+Gothic|Source+Sans+Pro:400,300|Open+Sans:300|Quicksand|Chivo|Dosis:500,600' rel='stylesheet' type='text/css'>
 
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -69,7 +69,7 @@
       <div class="headerFrame">
         <div class="headerContent">
 
-          <h1>蔣承勳</h1>
+          <!-- <h1>蔣承勳</h1> -->
           <h2>Wade Chiang</h2>
           <h2>純粹自我論述</h2>
           <p>
@@ -113,7 +113,7 @@
         <h1>About me...</h1>
         <br /><br />
         <p>
-          熱愛生命、閱讀與有質感的事物。 對vintage與懷舊的東西，如老琴、老建築與"真老街"情有獨鍾<br /><br />
+          熱愛生命、閱讀與有質感的事物。 對vintage與懷舊的東西，老琴、老建築與真正的老街情有獨鍾<br /><br />
           目前正努力補完以往都不特別在意的Miles Davis
           <br></p>
       </div>
@@ -326,13 +326,13 @@
           也許有人會問：「這樣的工作有何生產力可言？」<br />
           <br />
           要知道公家機關的任務並非生產而是創造生產。不過在我幹這差事的那兩年，敝單位可說是全局收入最高的部門，多少呢？大概年收一億多吧。<br />
-          也因此業者時常大罵：「這根本是文字獄，政府只想把我們當提款機！」但我必須說，取締違規廣告這件事的確有許多可議之處，不過到底它本質上還是正面的啦。<br />
+          業者時常大罵：「這根本是文字獄，政府只想把我們當提款機！」但我必須說，取締違規廣告這件事的確有許多可議之處，不過到底它本質上還是正面的啦。<br />
           <br />
           終日與廣告為伍，也讓我不得不對文字、排版…等更加敏感，但創意這種東西如果能被法條綁死，那也太小看人的智慧了。因此抓歸抓，很多時間我也當起廠商的顧問，我時常為了某句的用字不精準或不夠漂亮而頭痛。也許有點自找麻煩，但解決大家的問題，政府不就這回事？<br />
           <br />
-          之後當我有機會調到外面，做些一般人認為稽查員該幹的事情時，那又是完全不同的世界了。衛生單位雖然不若消防那樣遍及全國各角落，但也是管很大，想得到跟「吃」有關的一切，如夜市、菜市場、食品工廠…，跟「醫藥」有關的藥局、診所醫院，這些都還在可以理解的範圍，至於夜店、護膚店、國術館、三溫暖、網咖、檳榔攤與「深山裡的瓦斯分裝廠」可能就是一般人比較無法想像的了，但這些地方確實都有我們的足跡。<br />
+          等到我有機會調到外面，做些一般人認為稽查員該幹的事情時，那又是完全不同的世界了。衛生單位雖然不若消防那樣遍及全國各角落，但也是管很大，想得到跟「吃」有關的一切，如夜市、菜市場、食品工廠…，跟「醫藥」有關的藥局、診所醫院，這些都還在可以理解的範圍，至於夜店、護膚店、國術館、三溫暖、網咖、檳榔攤與「深山裡的瓦斯分裝廠」可能就是一般人比較無法想像的了，但這些地方確實都有我們的足跡。<br />
           <br />
-          當你必須每天面對形形色色的人，尤其你的身份是個執法者時，衝突就會是很難避免的了。我也曾在市場被菜販與婆婆媽媽圍起來訐譙過，但比起被流氓直接拉下鐵門關廁所的同事算是好的多。在這種環境下，你不是設法找出自己的一套應對進退，就得等著到處碰釘子。還好我發現自己這方面還蠻得心應手的，也因此雖然身為執法者，但我也從這些人身上學到了很多，算是這工作最大的收穫。<br />
+          當你必須每天面對形形色色的人，尤其你的身份是個執法者時，衝突就會是很難避免的了。我也在市場被菜販與婆婆媽媽圍起來訐譙過，但比起被流氓直接拉下鐵門關廁所的同事算是好的多。在這種環境下，你不是設法找出自己的一套應對進退，就得等著到處碰釘子。還好我發現自己這方面還蠻得心應手的，也因此雖然身為執法者，但我也從這些人身上學到了很多，算是這工作最大的收穫。<br />
           <br />
           四年下來，雖然也有許多不如人意的時候，但我蠻樂在工作的，也許是我很會在過程中發現樂趣與成就感吧，真要說有什麼遺憾，大概就是跟許多人一樣，會有身為最基層對於龐大體制的無奈，但撇開不論，這裡實在有著太多荒謬與有趣的人事物，雖然離開了，我也應該會懷念很久吧！
         </p>
@@ -363,7 +363,7 @@
 <!-- ===============Footer Start===============  -->
 
 <footer>
-        <div>Copyright © 2016 &nbsp Wade Chiang</div>
+        <div>Copyright © 2018 &nbsp Wade Chiang</div>
 </footer>
 
 
