--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Wade Chaing's resume</title>
+  <title>Wade Chiang's resume</title>
 
 
   <!-- Basic JQuery Slide CSS Style -->
@@ -70,7 +70,7 @@
       <div class="headerFrame">
         <div class="headerContent">
 
-          <!-- <h1>蔣承勳</h1> -->
+          <h1>蔣承勳</h1>
           <h2 id="myName">Wade Chiang</h2>
           <h2>純粹自我論述</h2>
           <p>
@@ -95,7 +95,7 @@
 
         <div class="row">
           <div class="col-sm-12 col-xs-6 col-avatar">
-            <img src="image/avatar.png" alt="avatar" class="avatar">
+            <img src="image/avatar.png" alt="avatar" class="avatar" weight="150" height="150">
           </div>
 
           <div class="col-sm-12 col-sm-push-1 col-xs-6 col-info">
